crates/backyard-lexer/tests/snapshots/comment__block.snap
---
source: crates/backyard-lexer/tests/comment.rs
assertion_line: 12
expression: tokens
snapshot_kind: text
---
- token_type: CommentBlock
  value: " test "
  line: 1
  column: 0
  offset: 0
