crates/backyard-lexer/tests/snapshots/comment__doc.snap
---
source: crates/backyard-lexer/tests/comment.rs
expression: tokens
snapshot_kind: text
---
- token_type: CommentDoc
  value:
    - 10
    - 32
    - 42
    - 32
    - 116
    - 101
    - 115
    - 116
    - 10
    - 32
  line: 1
  column: 0
  offset: 0
