crates/backyard-lexer/tests/snapshots/comment__doc_param_description.snap
---
source: crates/backyard-lexer/tests/comment.rs
assertion_line: 300
expression: tokens
snapshot_kind: text
---
- token_type: CommentDocOpen
  value:
    - 47
    - 42
    - 42
  line: 1
  column: 0
  offset: 0
- token_type: DocTagParam
  value:
    - 64
    - 112
    - 97
    - 114
    - 97
    - 109
  line: 1
  column: 4
  offset: 4
- token_type: Type
  value:
    - 115
    - 116
    - 114
    - 105
    - 110
    - 103
  line: 1
  column: 11
  offset: 11
- token_type: Variable
  value:
    - 36
    - 102
    - 111
    - 111
  line: 1
  column: 18
  offset: 18
- token_type: DocUnknown
  value:
    - 116
    - 101
    - 115
    - 116
    - 105
    - 110
    - 103
  line: 1
  column: 23
  offset: 23
- token_type: DocHorizontalWhitespace
  value:
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
    - 32
  line: 2
  column: 3
  offset: 34
- token_type: DocUnknown
  value:
    - 115
    - 101
    - 99
    - 111
    - 110
    - 100
  line: 2
  column: 23
  offset: 54
- token_type: DocUnknown
  value:
    - 108
    - 105
    - 110
    - 101
  line: 2
  column: 30
  offset: 61
- token_type: DocUnknown
  value:
    - 100
    - 101
    - 115
    - 99
    - 114
    - 105
    - 112
    - 116
    - 105
    - 111
    - 110
  line: 2
  column: 35
  offset: 66
- token_type: CommentDocClose
  value:
    - 42
    - 47
  line: 2
  column: 46
  offset: 77
- token_type: Variable
  value:
    - 97
  line: 3
  column: 0
  offset: 80
- token_type: Assignment
  value:
    - 61
  line: 3
  column: 3
  offset: 83
- token_type: Number
  value:
    - 53
  line: 3
  column: 5
  offset: 85
- token_type: Semicolon
  value:
    - 59
  line: 3
  column: 6
  offset: 86
