crates/backyard-lexer/tests/snapshots/comment__doc_param_no_var.snap
---
source: crates/backyard-lexer/tests/comment.rs
assertion_line: 289
expression: tokens
snapshot_kind: text
---
- token_type: CommentDocOpen
  value:
    - 47
    - 42
    - 42
  line: 1
  column: 0
  offset: 0
- token_type: DocTagParam
  value:
    - 64
    - 112
    - 97
    - 114
    - 97
    - 109
  line: 1
  column: 4
  offset: 4
- token_type: Type
  value:
    - 115
    - 116
    - 114
    - 105
    - 110
    - 103
  line: 1
  column: 11
  offset: 11
- token_type: DocUnknown
  value:
    - 116
    - 101
    - 115
    - 116
    - 105
    - 110
    - 103
  line: 1
  column: 18
  offset: 18
- token_type: CommentDocClose
  value:
    - 42
    - 47
  line: 1
  column: 26
  offset: 26
- token_type: Variable
  value:
    - 97
  line: 2
  column: 0
  offset: 29
- token_type: Assignment
  value:
    - 61
  line: 2
  column: 3
  offset: 32
- token_type: Number
  value:
    - 53
  line: 2
  column: 5
  offset: 34
- token_type: Semicolon
  value:
    - 59
  line: 2
  column: 6
  offset: 35
